[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderabbit-review-extractor"
version = "1.0.0"
description = "Extract CodeRabbit GitHub PR reviews for AI coding agent consumption"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jesse Vincent", email = "jesse@fsck.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7", 
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Markup :: HTML"
]
keywords = ["coderabbit", "code-review", "ai", "llm", "github", "automation"]
requires-python = ">=3.6"
dependencies = [
    "beautifulsoup4>=4.9.0"
]

[project.urls]
Homepage = "https://github.com/obra/coderabbit-review-helper"
Repository = "https://github.com/obra/coderabbit-review-helper"
Issues = "https://github.com/obra/coderabbit-review-helper/issues"

[project.scripts]
coderabbit-extract = "coderabbit_review_extractor:main"

[tool.setuptools]
py-modules = ["extract-coderabbit-feedback"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8"
]